# knowledge-base-server

./: .dockerignore  .stylish-haskell.yaml  .travis.yml  ChangeLog.md  Dockerfile  HLint.hs  README.md  cardano-knowledgebase-server.cabal  result.json  stack.yaml
app/: Main.hs
doc/FAQ/how-do-i-backup-my-wallet/: ja.md
doc/FAQ/is-explorer-available/: en.md
doc/FAQ/linux-version-of-daedalus/: en.md  ja.md
doc/FAQ/transaction-isnt-showing/: MetaData.md  ja.md
doc/FAQ/wallet-stuck-after-update/: en.md
doc/FAQ/what-is-transaction-assurance/: en.md
doc/FAQ/will-uninstallation-delete-coins/: MetaData.md  en.md
doc/Issues/ConnectionIssue/: MetaData.md
doc/Issues/TimeOutSync/: en.md  ja.md
doc/Issues/db-path/: MetaData.md  ja.md
doc/Issues/time-out-of-sync/: MetaData.md
doc/Knowledges/connection-issue/: MetaData.md  en.md  ja.md
doc/Knowledges/db-path/: MetaData.md  en.md
doc/Questions/CannotCopyPaste/: ja.md
doc/Questions/Explorer/: ja.md
doc/Questions/InabilityToSendAda/: en.md
doc/Questions/LightClient/: en.md
doc/Questions/MyWalletFreezesWhileRestoring/: en.md  ja.md
doc/Questions/Transaction/: en.md
doc/Questions/TransactionAssurance/: ja.md
doc/Questions/TransactionNotShownInSummary/: en.md  ja.md
doc/Questions/WalletStuckAfterUpdate/: ja.md
doc/Questions/cannot-copy-paste/: en.md
doc/Questions/how-do-i-backup-my-wallet/: en.md
doc/Questions/inability-to-send-ada/: ja.md
doc/Questions/is-there-light-client/: ja.md
doc/Questions/transaction-isnt-showing/: MetaData.md
doc/Questions/will-uninstallation-delete-coins/: ja.md
doc/Templates/FAQ/: MetaData.md  en.md  ja.md
doc/Templates/Issues/: en.md  ja.md
doc/Templates/Knowledge/: MetaData.md
src/: API.hs  CLI.hs  Exceptions.hs  Types.hs
src/Parser/: FAQ.hs  Knowledge.hs  Parser.hs  Question.hs  Util.hs
test/: Spec.hs
