name:                 cardano-knowledgebase-server
version:              0.1.0.0
description:          Please see the README on Github at <https://github.com/githubuser/cardano-knowledgebase-server#readme>
homepage:             https://github.com/githubuser/cardano-knowledgebase-server#readme
bug-reports:          https://github.com/githubuser/cardano-knowledgebase-server/issues
author:               Author name here
maintainer:           example@example.com
copyright:            2018 Author name here
license:              BSD3
license-file:         LICENSE
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:   ChangeLog.md
                      README.md

library
  hs-source-dirs:     src
  build-depends:      aeson
                    , base >=4.7 && <5
                    , rio
                    , servant-server
  exposed-modules:    API
                      Exceptions
                      Parser.Knowledge
                      Parser.Util
                      Parser.FAQ
                      Parser.Parser
                      Types
  other-modules:      Paths_cardano_knowledgebase_server
  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      
  default-extensions: NoImplicitPrelude
                      OverloadedStrings
                      TypeFamilies

executable cardano-knowledgebase-server-api
  main-is:            Main.hs
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -threaded -rtsopts -with-rtsopts=-N
  build-depends:      cardano-knowledgebase-server
                    , aeson
                    , base >=4.7 && <5
                    , read-env-var
                    , rio
                    , say
                    , servant-server
                    , warp
  other-modules:      Paths_cardano_knowledgebase_server
  default-language:   Haskell2010

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
                      TypeFamilies

test-suite cardano-knowledgebase-server-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                    , cardano-knowledgebase-server
                    , say
                    , rio
  other-modules:      Paths_cardano_knowledgebase_server
  default-language:   Haskell2010

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
                      TypeFamilies
